@@ -1,4 +1,4 @@
-# $Id: Makefile.am,v 1.95 2009/10/13 15:42:50 smswehla Exp $  
+# $Id: Makefile.am,v 1.96 2009/10/13 19:19:11 smswehla Exp $  
 #
 #  Makefile.am
 # 
@@ -438,7 +438,7 @@ EXTRA_DIST=sfcb.cfg.pre.in sfcb.spec sfcbrepos.sh.in sfcbstage.sh.in \
 
 dist_sfcbdata_SCRIPTS=genSslCert.sh getSchema.sh test/stageschema.sh
 
-dist_sfcbdata_DATA=default.reg 10_interop.mof indication.mof
+dist_sfcbdata_DATA=default.reg 10_interop.mof 20_indication.mof indication.mof
 
 nodist_bin_SCRIPTS=sfcbrepos sfcbstage sfcbunstage sfcbuuid
 
@@ -508,6 +508,7 @@ install-data-local:
 	$(INSTALL_DATA) ./default.reg $(DESTDIR)$(sfcbstatedir)/stage
 	$(INSTALL_DATA) $(srcdir)/10_interop.mof $(DESTDIR)$(sfcbstatedir)/stage/mofs/root/interop
 if INDICATIONS
+	$(INSTALL_DATA) $(srcdir)/20_indication.mof $(DESTDIR)$(sfcbstatedir)/stage/mofs/root/interop
 	$(INSTALL_DATA) $(srcdir)/indication.mof $(DESTDIR)$(sfcbstatedir)/stage/mofs
 endif
 if DOCS
@@ -519,6 +520,7 @@ uninstall-local:
 	rm -f $(DESTDIR)$(sfcbstatedir)/stage/default.reg
 	rm -f $(DESTDIR)$(sfcbstatedir)/stage/root/interop/10_interop.mof
 if INDICATIONS
+	rm -f $(DESTDIR)$(sfcbstatedir)/stage/root/interop/20_indication.mof
 	rm -f $(DESTDIR)$(sfcbstatedir)/stage/mofs/indication.mof
 endif
 if DOCS
